--- a/dyngraph.html
+++ b/dyngraph.html
@@ -281,12 +281,12 @@
 	      <td colspan="2">
 		<table>
 		  <tr>
-		    <td>Max Link Length</td>
+		    <td>Max Link Threshold</td>
 		    <td><input type="range" min="0" max="200" value="30" step="10" class="slider" id="slider_link_max_length")></td>
 		    <td class="right"><span id="span_link_max_length">30</span></td>
 		  </tr>
 		  <tr>
-		    <td>Min Link Length</td>
+		    <td>Min Link Threshold</td>
 		    <td><input type="range" min="0" max="200" value="20" step="10" class="slider" id="slider_link_min_length")></td>
 		    <td class="right"><span id="span_link_min_length">20</span></td>
 		  </tr>
