--- a/dyngraph.html
+++ b/dyngraph.html
@@ -175,35 +175,35 @@
 	  <table>
 	    <tr>
 	      <td><label>canvas</label></td>
-	      <td><input id="sz_canvas" type="number" min="100" max="8192"></input></td>
+	      <td><input id="sz_canvas" type="number" min="100" max="8192" /></td>
 	    </tr>
 	    <tr>
 	      <td><label>nodes</label></td>
-	      <td><input id="nu_nodes" type="number" min="2" max="1000"></input></td>
+	      <td><input id="nu_nodes" type="number" min="2" max="1000" /></td>
 	    </tr>
 	    <tr>
 	      <td><label>radius</label></td>
-	      <td><input id="sz_radius" type="number" min="0" max="100"></input></td>
+	      <td><input id="sz_radius" type="number" min="0" max="100" /></td>
 	    </tr>
 	    <tr>
 	      <td><label>edges</label></td>
-	      <td><input id="nu_edges" type="number" min="1" max="1000"></input></td>
+	      <td><input id="nu_edges" type="number" min="1" max="1000" /></td>
 	    </tr>
 	    <tr>
 	      <td><label>line width</label></td>
-	      <td><input id="wd_line" type="number" min="1" max="32"></input></td>
+	      <td><input id="wd_line" type="number" min="1" max="32" /></td>
 	    </tr>
 	    <tr>
 	      <td><label>branches</label></td>
-	      <td><input id="nu_branches" type="number" min="1" max="10" disabled></input></td>
+	      <td><input id="nu_branches" type="number" min="1" max="10" disabled></td>
 	    </tr>
 	    <tr>
 	      <td><label>scatter</label></td>
-	      <td><input id="nu_scatter" type="number" min="1" max="100"></input><label>%</label></td>
+	      <td><input id="nu_scatter" type="number" min="1" max="100" /><label>%</label></td>
 	    </tr>
 	    <tr>
 	      <td><label>alpha</label></td>
-	      <td><input id="nu_alpha" type="number" min="10" max="100"></input><label>%</label></td>
+	      <td><input id="nu_alpha" type="number" min="10" max="100" /><label>%</label></td>
 	    </tr>
 	    <tr>
 	      <td colspan="2">
@@ -216,51 +216,50 @@
 		  </tr>
 		  <tr>
 		    <td><label>fill</label></td>
-		    <td class="centred"><input id="fill_colour" type="color"></input></td>
-		    <td class="centred"><input id="rnd_fill_colour" class="cb" type="checkbox"></input></td>
-		    <td class="centred"><input id="fill_colour_off" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="fill_colour" type="color" /></td>
+		    <td class="centred"><input id="rnd_fill_colour" class="cb" type="checkbox" /></td>
+		    <td class="centred"><input id="fill_colour_off" class="cb" type="checkbox" /></td>
 		  </tr>
 		  <tr>
 		    <td><label>outline</label></td>
-		    <td class="centred"><input id="outline_col" type="color"></input></td>
-		    <td class="centred"><input id="rnd_outline_col" class="cb" type="checkbox"></input></td>
-		    <td class="centred"><input id="outline_col_off" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="outline_col" type="color" /></td>
+		    <td class="centred"><input id="rnd_outline_col" class="cb" type="checkbox" /></td>
+		    <td class="centred"><input id="outline_col_off" class="cb" type="checkbox" /></td>
 		  </tr>
 		  <tr>
 		    <td><label>line</label></td>
-		    <td class="centred"><input id="line_colour" type="color"></input></td>
-		    <td class="centred"><input id="rnd_line_colour" class="cb" type="checkbox"></input></td>
-		    <td class="centred"><input id="line_colour_off" class="cb" type="checkbox"></input></td>
+		    <td class="centred"><input id="line_colour" type="color" /></td>
+		    <td class="centred"><input id="rnd_line_colour" class="cb" type="checkbox" /></td>
+		    <td class="centred"><input id="line_colour_off" class="cb" type="checkbox" /></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace fill</label></td>
-		    <td class="centred"><input id="trc_fil_col" type="color"></input></td>
-		    <td class="centred"><input id="rnd_trc_fil_col" class="cb" type="checkbox"></input></td>
-		    <td class="centred"><input id="trc_fil_col_off" class="cb" type="checkbox" disabled></input></td>
+		    <td class="centred"><input id="trc_fil_col" type="color" /></td>
+		    <td class="centred"><input id="rnd_trc_fil_col" class="cb" type="checkbox" /></td>
+		    <td class="centred"><input id="trc_fil_col_off" class="cb" type="checkbox" disabled></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace outl.</label></td>
-		    <td class="centred"><input id="trc_oli_col" type="color"></input></td>
-		    <td class="centred"><input id="rnd_trc_oli_col" class="cb" type="checkbox"></input></td>
-		    <td class="centred"><input id="trc_oli_col_off" class="cb" type="checkbox" disabled></input></td>
+		    <td class="centred"><input id="trc_oli_col" type="color" /></td>
+		    <td class="centred"><input id="rnd_trc_oli_col" class="cb" type="checkbox" /></td>
+		    <td class="centred"><input id="trc_oli_col_off" class="cb" type="checkbox" disabled></td>
 		  </tr>
 		  <tr>
 		    <td><label>trace line</label></td>
-		    <td class="centred"><input id="trc_lin_col" type="color"></input></td>
-		    <td class="centred"><input id="rnd_trc_lin_col" class="cb" type="checkbox"></input></td>
-		    <td class="centred"><input id="trc_lin_col_off" class="cb" type="checkbox" disabled></input></td>
+		    <td class="centred"><input id="trc_lin_col" type="color" /></td>
+		    <td class="centred"><input id="rnd_trc_lin_col" class="cb" type="checkbox"></td>
+		    <td class="centred"><input id="trc_lin_col_off" class="cb" type="checkbox" disabled></td>
 		  </tr>
 		</table>
 	      </td>
 	    </tr>
 	    <tr>
 	      <td><label>Tracing:</label></td>
-	      <td><input id="cb_tracing" class="cb" type="checkbox" checked></input></td>
-	      <!-- <td><input type="button" class="button1" id="btn_reset" onClick="reset_values();" value="Reset Values" disabled></td> -->
+	      <td><input id="cb_tracing" class="cb" type="checkbox" checked></td>
 	    </tr>
 	    <tr>
 	      <td><label>Output file:</label></td>
-	      <td><input type="text" class="button1" id="out_fn" value="settings.json" /></label></td>
+	      <td><label><input type="text" class="button1" id="out_fn" value="settings.json" /></label></td>
 	    </tr>
 	    <tr>
 	      <td><input type="button" class="button1" id="btn_clear" onClick="clear_canvas();" value="Clear Canvas" /></td>
@@ -271,10 +270,7 @@
 	      <td><input type="button" class="button1" id="btn_start" onClick="restart()" value="Restart" /></td>
 	    </tr>
 	    <tr>
-	      <td colspan="2"><input type="file" id="infilename"></td>
-	    </tr>
-	    <tr>
-	      
+	      <td colspan="2"><input type="file" id="infilename" /></td>
 	    </tr>
 	    <tr><td colspan="2" class="centred"><label>Physics Parameters</label></td></tr>
 	    <tr>
@@ -343,7 +339,33 @@
 	    </tr>
 	  </table>
 	</div>
-	<div class="column" id="canvas_space"><canvas id="cv_canv" onclick="pause_or_continue(btn_pause_conti)" ondblclick="clear_canvas()"></canvas></div>
+	<div class="column" id="canvas_space">
+	  <table>
+	    <tr>
+	      <td rowspan="4">
+		<canvas id="cv_canv" onclick="pause_or_continue(btn_pause_conti)" ondblclick="clear_canvas()"></canvas>
+	      </td>
+	      <td>
+		<input type="button" id="btn_up" onClick="nudge('up');" value="上" />
+	      </td>
+	    </tr>
+	    <tr>
+	      <td>
+		<input type="button" id="btn_left" onClick="nudge('left');" value="左" />
+	      </td>
+	    </tr>
+	    <tr>
+	      <td>
+		<input type="button" id="btn_right" onClick="nudge('right');" value="右" />
+	      </td>
+	    </tr>
+	    <tr>
+	      <td>
+		<input type="button" id="btn_down" onClick="nudge('down');" value="下" />
+	      </td>
+	    </tr>
+	  </table>
+	</div>
       </div>
       <script type="text/javascript">
 	const canv = document.getElementById("cv_canv")
