refresh colours with button

--- a/dyngraph.html
+++ b/dyngraph.html
@@ -268,8 +268,8 @@
 	      </td>
 	    </tr>
 	    <tr>
-	      <td><label>Tracing:</label></td>
-	      <td><input id="cb_tracing" class="cb" type="checkbox" checked></td>
+	      <td><label>Tracing: <input id="cb_tracing" class="cb" type="checkbox" checked></label></td>
+	      <td><input type="button" class="button1" id="btn_refresh_colours" onClick="refresh_colours();" value="Refresh Colours" /></td>
 	    </tr>
 	    <tr>
 	      <td><label>Output file:</label></td>
