--- a/dyngraph.html
+++ b/dyngraph.html
@@ -193,9 +193,9 @@
 	    <tr>
 	      <td><label>shape</label></td>
 	      <td><select class="button1" id="sel_shape" onchange="proc_shape_sel('sel_shape','node_dim_target')">
-		  <option value="c" selected>circle</option>
+		  <option value="c">circle</option>
 		  <option value="s">square</option>
-		  <option value="e">ellipse</option>
+		  <option value="e" selected>ellipse</option>
 		  <option value="r">rectangle</option>
 		</select></td>
 	    </tr>
@@ -268,7 +268,7 @@
 	      </td>
 	    </tr>
 	    <tr>
-	      <td><label>Tracing: <input id="cb_tracing" class="cb" type="checkbox" checked></label></td>
+	      <td><label>Tracing: <input id="cb_tracing" class="cb" type="checkbox"></label></td>
 	      <td><input type="button" class="button1" id="btn_refresh_colours" onClick="refresh_colours();" value="Refresh Colours" /></td>
 	    </tr>
 	    <tr>
@@ -386,12 +386,12 @@
 	const c2d = canv.getContext("2d");
 	const inp_vals = {
 	    sz_canvas:  1000,
-	    nu_nodes:    100,
+	    nu_nodes:    10,
 	    nu_edges:    100,
 	    wd_line:       1,
 	    nu_branches:   2,
 	    nu_scatter:   80,
-	    nu_alpha:     90,
+	    nu_alpha:     50,
 	}
 	function update_alpha(alpha_value) {
 	    update_global_alpha(Math.abs(Number(alpha_value)) / 100);
@@ -530,7 +530,6 @@
 	    for(let rowind in row_data) {
 		const tr = tbdy.insertRow();
 		for(let rowtxt in row_data[rowind]) {
-		    console.log(rowtxt);
 		    const td = tr.insertCell();
 		    td.setAttribute("class","button1");
 		    const lbl = document.createElement("label");
